[package]
name = "gambatee"
version = "0.1.0"
edition = "2024"

[dependencies]
config = "0.15.18"
dotenv = "0.15.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serenity = { version = "0.12.4", features = ["cache", "client", "gateway", "model"] }
tokio = { version = "1.47.1", features = ["full"] }
