[package]
name = "gambatee"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
config = "0.15.18"
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.28"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serenity = { version = "0.12.4", features = ["cache", "client", "gateway", "model"] }
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio-native-tls"] }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
